MGS-714 TASK fix display of expand policy data button on iOS

--- a/resources/scss/components/_component.policy-data.scss
+++ b/resources/scss/components/_component.policy-data.scss
@@ -16,6 +16,7 @@
     border: 1px solid $color__blue--base;
     border-radius: 24px;
     height: 24px;
+    padding: 0;
     width: 24px;
 
     &:before {
